# games-launchers-firewall-control

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json
.agent/rules/: rules.md
.agent/workflows/: README.md  bugfix.md  commit.md  feature.md  release.md  setup.md  sync.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: tauri-build.yml
public/: splash.html
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: launcher_detector.rs  lib.rs  main.rs
src/components/: LanguageSelector.tsx  LaunchersView.tsx  NotesView.tsx  SettingsView.tsx  SetupWizard.tsx  ThemedModal.tsx
src/contexts/: LanguageContext.tsx  ModalContext.tsx
src/locales/: en.ts  tr.ts
