[package]
name = "games-launchers-firewall-control"
version = "0.1.0"
description = "Professional-grade launcher management and network control solution for gaming environments"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/games-launchers-firewall-control"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "games_launchers_firewall_control_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
winres = "0.1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
steamlocate = "2"
keyvalues-serde = "0.1"
tauri-plugin-dialog = "2.5.0"
tauri-plugin-fs = "2.4.5"
winreg = "0.52"
indexmap = { version = "2.13.0", features = ["serde"] }



